First go at expression transformer
Look for an expression that transforms from one to the next. I think
this is actually all the code we will need. But need to decide on error
messages. Also, finish out all the tests.
#4

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -215,6 +215,7 @@
     <Compile Include="QueriableDummy.cs" />
     <Compile Include="QueriableDummyNoExe.cs" />
     <Compile Include="QueryResultCacheTest.cs" />
+    <Compile Include="QueryVisitors\PropertyExpressionTransformerTest.cs" />
     <Compile Include="QueryVisitors\QueryVisitorOnImpliedObjectsTest.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitorTest.cs" />
     <Compile Include="QueryVisitors\CreateTupleExpressionTransformerTest.cs" />
