--- a/LINQToTTree/CmdTFileParser/packages.config
+++ b/LINQToTTree/CmdTFileParser/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ROOT.NET.Core" version="5.34.32.7" targetFramework="net40-Client" />
-  <package id="ROOT.NET.Dynamic" version="5.34.32.7" targetFramework="net40-Client" />
-  <package id="ROOT.NET.Tree" version="5.34.32.7" targetFramework="net40-Client" />
+  <package id="ROOT.NET.Core" version="5.34.34.8" targetFramework="net45" />
+  <package id="ROOT.NET.Dynamic" version="5.34.34.8" targetFramework="net45" />
+  <package id="ROOT.NET.Tree" version="5.34.34.8" targetFramework="net45" />
 </packages>
