--- a/LINQToTTree/LINQToTreeHelpers.Tests/LINQToTreeHelpers.Tests.csproj
+++ b/LINQToTTree/LINQToTreeHelpers.Tests/LINQToTreeHelpers.Tests.csproj
@@ -17,7 +17,8 @@
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\LINQToTTree\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <TargetFrameworkProfile />
-    <NuGetPackageImportStamp>74392da9</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -59,28 +60,28 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="libCoreWrapper, Version=7.7.5709.38843, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.32.7\lib\net40\libCoreWrapper.dll</HintPath>
+    <Reference Include="libCoreWrapper, Version=8.8.5793.31488, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.34.8\lib\net40\libCoreWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libHistWrapper, Version=7.7.5709.38909, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Core.5.34.32.7\lib\net40\libHistWrapper.dll</HintPath>
+    <Reference Include="libHistWrapper, Version=8.8.5793.31802, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.34.8\lib\net40\libHistWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libMathCoreWrapper, Version=7.7.5709.38852, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Core.5.34.32.7\lib\net40\libMathCoreWrapper.dll</HintPath>
+    <Reference Include="libMathCoreWrapper, Version=8.8.5793.31507, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.34.8\lib\net40\libMathCoreWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libPhysicsWrapper, Version=7.7.5709.39039, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Core.5.34.32.7\lib\net40\libPhysicsWrapper.dll</HintPath>
+    <Reference Include="libPhysicsWrapper, Version=8.8.5793.32080, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.34.8\lib\net40\libPhysicsWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libRIOWrapper, Version=7.7.5709.38931, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Core.5.34.32.7\lib\net40\libRIOWrapper.dll</HintPath>
+    <Reference Include="libRIOWrapper, Version=8.8.5793.31849, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.34.8\lib\net40\libRIOWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libThreadWrapper, Version=7.7.5709.38907, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Core.5.34.32.7\lib\net40\libThreadWrapper.dll</HintPath>
+    <Reference Include="libThreadWrapper, Version=8.8.5793.31799, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.34.8\lib\net40\libThreadWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
@@ -100,8 +101,8 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="WrapperPlumbingLibrary, Version=2.6.5709.38711, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.32.7\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
+    <Reference Include="WrapperPlumbingLibrary, Version=2.6.5793.31203, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.34.8\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
@@ -149,12 +150,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
-  <Import Project="..\packages\ROOT.NET.Dynamic.5.34.32.7\build\net40\ROOT.NET.Dynamic.targets" Condition="Exists('..\packages\ROOT.NET.Dynamic.5.34.32.7\build\net40\ROOT.NET.Dynamic.targets')" />
+  <Import Project="..\packages\ROOT.NET.Dynamic.5.34.34.8\build\net40\ROOT.NET.Dynamic.targets" Condition="Exists('..\packages\ROOT.NET.Dynamic.5.34.34.8\build\net40\ROOT.NET.Dynamic.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\ROOT.NET.Dynamic.5.34.32.7\build\net40\ROOT.NET.Dynamic.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ROOT.NET.Dynamic.5.34.32.7\build\net40\ROOT.NET.Dynamic.targets'))" />
+    <Error Condition="!Exists('..\packages\ROOT.NET.Dynamic.5.34.34.8\build\net40\ROOT.NET.Dynamic.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ROOT.NET.Dynamic.5.34.34.8\build\net40\ROOT.NET.Dynamic.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
