--- a/LINQToTTree/LINQToTreeHelpers/LINQToTreeHelpers.csproj
+++ b/LINQToTTree/LINQToTreeHelpers/LINQToTreeHelpers.csproj
@@ -16,7 +16,8 @@
     </TargetFrameworkProfile>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\LINQToTTree\</SolutionDir>
     <RestorePackages>true</RestorePackages>
-    <NuGetPackageImportStamp>fee3f408</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -68,48 +69,48 @@
     <Reference Include="Doddle.Reporting">
       <HintPath>..\Libraries\Doddle.Reporting.dll</HintPath>
     </Reference>
-    <Reference Include="libCoreWrapper, Version=7.7.5709.38843, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.32.7\lib\net40\libCoreWrapper.dll</HintPath>
+    <Reference Include="libCoreWrapper, Version=8.8.5793.31488, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.34.8\lib\net40\libCoreWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libGpadWrapper, Version=7.7.5709.38971, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Graphing.5.34.32.7\lib\net40\libGpadWrapper.dll</HintPath>
+    <Reference Include="libGpadWrapper, Version=8.8.5793.31930, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Graphing.5.34.34.8\lib\net40\libGpadWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libGraf3dWrapper, Version=7.7.5709.39029, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Graphing.5.34.32.7\lib\net40\libGraf3dWrapper.dll</HintPath>
+    <Reference Include="libGraf3dWrapper, Version=8.8.5793.32060, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Graphing.5.34.34.8\lib\net40\libGraf3dWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libGrafWrapper, Version=7.7.5709.38955, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Graphing.5.34.32.7\lib\net40\libGrafWrapper.dll</HintPath>
+    <Reference Include="libGrafWrapper, Version=8.8.5793.31901, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Graphing.5.34.34.8\lib\net40\libGrafWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libHistWrapper, Version=7.7.5709.38909, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Core.5.34.32.7\lib\net40\libHistWrapper.dll</HintPath>
+    <Reference Include="libHistWrapper, Version=8.8.5793.31802, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.34.8\lib\net40\libHistWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libMathCoreWrapper, Version=7.7.5709.38852, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Core.5.34.32.7\lib\net40\libMathCoreWrapper.dll</HintPath>
+    <Reference Include="libMathCoreWrapper, Version=8.8.5793.31507, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.34.8\lib\net40\libMathCoreWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libPhysicsWrapper, Version=7.7.5709.39039, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Core.5.34.32.7\lib\net40\libPhysicsWrapper.dll</HintPath>
+    <Reference Include="libPhysicsWrapper, Version=8.8.5793.32080, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.34.8\lib\net40\libPhysicsWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libRIOWrapper, Version=7.7.5709.38931, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Core.5.34.32.7\lib\net40\libRIOWrapper.dll</HintPath>
+    <Reference Include="libRIOWrapper, Version=8.8.5793.31849, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.34.8\lib\net40\libRIOWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="libThreadWrapper, Version=7.7.5709.38907, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Core.5.34.32.7\lib\net40\libThreadWrapper.dll</HintPath>
+    <Reference Include="libThreadWrapper, Version=8.8.5793.31799, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.34.8\lib\net40\libThreadWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Remotion.Linq, Version=1.15.15.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Remotion.Linq.1.15.15.0\lib\portable-net45+wp80+wpa81+win\Remotion.Linq.dll</HintPath>
     </Reference>
-    <Reference Include="Sprache, Version=2.0.0.46, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Sprache.2.0.0.46\lib\portable-net4+netcore45+win8+wp8+sl5+MonoAndroid1+MonoTouch1\Sprache.dll</HintPath>
+    <Reference Include="Sprache, Version=2.0.0.50, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sprache.2.0.0.50\lib\portable-net4+netcore45+win8+wp8+sl5+MonoAndroid+Xamarin.iOS10+MonoTouch\Sprache.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -119,8 +120,8 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WrapperPlumbingLibrary, Version=2.6.5709.38711, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.32.7\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
+    <Reference Include="WrapperPlumbingLibrary, Version=2.6.5793.31203, Culture=neutral, processorArchitecture=x86">
+      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.34.8\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
@@ -161,12 +162,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
-  <Import Project="..\packages\ROOT.NET.Dynamic.5.34.32.7\build\net40\ROOT.NET.Dynamic.targets" Condition="Exists('..\packages\ROOT.NET.Dynamic.5.34.32.7\build\net40\ROOT.NET.Dynamic.targets')" />
+  <Import Project="..\packages\ROOT.NET.Dynamic.5.34.34.8\build\net40\ROOT.NET.Dynamic.targets" Condition="Exists('..\packages\ROOT.NET.Dynamic.5.34.34.8\build\net40\ROOT.NET.Dynamic.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\ROOT.NET.Dynamic.5.34.32.7\build\net40\ROOT.NET.Dynamic.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ROOT.NET.Dynamic.5.34.32.7\build\net40\ROOT.NET.Dynamic.targets'))" />
+    <Error Condition="!Exists('..\packages\ROOT.NET.Dynamic.5.34.34.8\build\net40\ROOT.NET.Dynamic.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ROOT.NET.Dynamic.5.34.34.8\build\net40\ROOT.NET.Dynamic.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
