Move identical statements when combining, if requested.
Added a "move" parameter. Do the move when the statements are identical
and succsefully combined. That way, if the move isn't totally
successful, some of the statements will have shifted, but not all of
them.
#27

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Utils\GeneratedCodeHelpers.cs" />
     <Compile Include="Utils\ObjectHashCalculator.cs" />
     <Compile Include="Utils\QVResultOperators.cs" />
+    <Compile Include="Utils\StatementUtils.cs" />
     <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="Utils\TypeUtils.cs" />
     <Compile Include="Variables\Savers\SaveSimpleVariable.cs" />
