--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Expressions\t_ExpressionsOnImpliedObjects.cs" />
     <Compile Include="Expressions\t_MultiLevelArrays.cs" />
     <Compile Include="Expressions\FindDeclarableParametersTest.cs" />
+    <Compile Include="Files\AsCSVTest.cs" />
     <Compile Include="FileUtilsTest.cs" />
     <Compile Include="FutureResultOperatorsTest.cs" />
     <Compile Include="FutureValueTTest.cs" />
