Can now follow a file path all the way through
Next, actually fill that file with something!

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="Utils\TypeUtils.cs" />
     <Compile Include="Variables\Savers\SaveSimpleVariable.cs" />
+    <Compile Include="Variables\Savers\SaveVarFileInfo.cs" />
     <Compile Include="Variables\Savers\VariableSaverManager.cs" />
     <Compile Include="Variables\Savers\SaveVarObject.cs" />
     <Compile Include="Variables\VarUtils.cs" />
