--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Files\AsCSVExpressionNode.cs" />
     <Compile Include="Files\AsCSVResultOperator.cs" />
     <Compile Include="Files\FileHelperQueryExtensions.cs" />
+    <Compile Include="Files\OutputCSVTextFileType.cs" />
     <Compile Include="Files\ROAsCSV.cs" />
     <Compile Include="Files\StatementCSVDump.cs" />
     <Compile Include="FutureResultOperators.cs" />
@@ -252,6 +253,7 @@
     <Compile Include="Utils\StatementUtils.cs" />
     <Compile Include="Utils\StringUtils.cs" />
     <Compile Include="Utils\TypeUtils.cs" />
+    <Compile Include="Variables\CPPObjectRepresentationTypeAttribute.cs" />
     <Compile Include="Variables\Savers\SaveSimpleVariable.cs" />
     <Compile Include="Variables\Savers\SaveVarFileInfo.cs" />
     <Compile Include="Variables\Savers\VariableSaverManager.cs" />
