First go at adding an output TTree file
#50

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Expressions\t_MultiLevelArrays.cs" />
     <Compile Include="Expressions\FindDeclarableParametersTest.cs" />
     <Compile Include="Files\AsCSVTest.cs" />
+    <Compile Include="Files\AsTTreeTest.cs" />
     <Compile Include="Files\FileUtilsForTesting.cs" />
     <Compile Include="FileUtilsTest.cs" />
     <Compile Include="FutureResultOperatorsTest.cs" />
