--- a/LINQToTTree/LINQToTTreeLib.Tests/packages.config
+++ b/LINQToTTree/LINQToTTreeLib.Tests/packages.config
@@ -2,7 +2,10 @@
 <packages>
   <package id="NVelocity" version="1.0.3" />
   <package id="Remotion.Linq" version="1.15.15.0" targetFramework="net45" />
+  <package id="ROOT.NET.All" version="5.34.34.9" targetFramework="net45" />
   <package id="ROOT.NET.Core" version="5.34.34.9" targetFramework="net45" />
   <package id="ROOT.NET.Dynamic" version="5.34.34.9" targetFramework="net45" />
+  <package id="ROOT.NET.Graphing" version="5.34.34.9" targetFramework="net45" />
+  <package id="ROOT.NET.PROOF" version="5.34.34.9" targetFramework="net45" />
   <package id="ROOT.NET.Tree" version="5.34.34.9" targetFramework="net45" />
 </packages>
