--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -431,6 +431,7 @@
     <Compile Include="QueriableDummy.cs" />
     <Compile Include="QueriableDummyNoExe.cs" />
     <Compile Include="QueryResultCacheTest.cs" />
+    <Compile Include="QueryVisitors\ConcatSplitterQueryTest.cs" />
     <Compile Include="QueryVisitors\PropertyExpressionTransformerTest.cs" />
     <Compile Include="QueryVisitors\QueryVisitorOnImpliedObjectsTest.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitorTest.cs" />
