First attempt at putting this in TTree Executor
The infrastructure isn't all the way there, but all tests are passing
that should.
Still missing:
- Filling in Adder's for various returns
- Calling the right executor for the different QM's that we build.

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -256,6 +256,7 @@
     <Compile Include="TypeHandlers\TypeHandlerConvert.cs" />
     <Compile Include="TypeHandlers\TypeHandlerHelpers.cs" />
     <Compile Include="Utils\EnumerableUtils.cs" />
+    <Compile Include="Utils\ExceptionUtils.cs" />
     <Compile Include="Utils\ExpressionUtilities.cs" />
     <Compile Include="Utils\FileUtils.cs" />
     <Compile Include="Utils\GeneratedCodeHelpers.cs" />
