--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -86,6 +86,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAddResults.cs" />
     <Compile Include="IArrayInfo.cs" />
     <Compile Include="IArrayInfoFactory.cs" />
     <Compile Include="IBookingStatementBlock.cs" />
