--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -424,6 +424,7 @@
     <Compile Include="Optimization\StatementLifterTest.cs" />
     <Compile Include="Optimization\CommonStatementLifterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QMExtractorQueriable.cs" />
     <Compile Include="QMFunctions\QMFuncFinderTest.cs" />
     <Compile Include="QMFunctions\CodeItUpHelpersTest.cs" />
     <Compile Include="QMFunctions\QMFuncUtils.cs" />
@@ -447,6 +448,7 @@
     <Compile Include="ResultOperators\TakeSkipOperatorsTest.cs" />
     <Compile Include="ResultOperators\TestCount.cs" />
     <Compile Include="ResultOperators\ROCountTest.cs" />
+    <Compile Include="SimpleTTreeExecutorQueriable.cs" />
     <Compile Include="Statements\StatementAggregateTest.cs" />
     <Compile Include="Statements\IStatementCombineTest.cs" />
     <Compile Include="Statements\StatementFilterTest.cs" />
