Add an adder for FileInfo's.
Fixes #85

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -184,6 +184,7 @@
     <Compile Include="GeneratedCode.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="IAddResults\AdderDouble.cs" />
+    <Compile Include="IAddResults\AdderFileInfoArray.cs" />
     <Compile Include="IAddResults\AdderInt.cs" />
     <Compile Include="IAddResults\AdderTH.cs" />
     <Compile Include="Optimization\CommonStatementLifter.cs" />
