This code combines two common loops
Loop A and then Loop A turn into Loop A! Woo!
#86

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -187,6 +187,7 @@
     <Compile Include="IAddResults\AdderFileInfoArray.cs" />
     <Compile Include="IAddResults\AdderInt.cs" />
     <Compile Include="IAddResults\AdderTH.cs" />
+    <Compile Include="Optimization\BlockRenamer.cs" />
     <Compile Include="Optimization\CommonStatementLifter.cs" />
     <Compile Include="Optimization\Optimizer.cs" />
     <Compile Include="Optimization\StatementLifter.cs" />
