Make inline blocks all aware of moving statements around.
#95 - but there are lots of other things touched by this.

This opens a lot more up to optimization... so it will be interesting to
see how much pain it is going to cause.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -422,6 +422,7 @@
     <Compile Include="FutureValueTTest.cs" />
     <Compile Include="GeneratedCodeTest.cs" />
     <Compile Include="MEFUtilities.cs" />
+    <Compile Include="Optimization\OptimizationUtilsTest.cs" />
     <Compile Include="Optimization\StatementLifterTest.cs" />
     <Compile Include="Optimization\CommonStatementLifterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
