First go at a test and some infrastructure to do CPP code

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -254,6 +254,7 @@
     <Compile Include="TraceHelpers.cs" />
     <Compile Include="TTreeQueryExecutor.cs" />
     <Compile Include="TypeHandlers\CPPCode\TypeHandlerCPPCode.cs" />
+    <Compile Include="TypeHandlers\CPPCode\TypeHandlerOnTheFlyCPP.cs" />
     <Compile Include="TypeHandlers\ReplacementMethodCalls\TypeHandlerReplacementCall.cs" />
     <Compile Include="TypeHandlers\ROOT\ROOTObjectCopiedValue.cs" />
     <Compile Include="TypeHandlers\ROOT\TypeHandlerROOT.cs" />
