--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -472,6 +472,7 @@
     <Compile Include="TTreeExecutorCombinationTests.cs" />
     <Compile Include="TTreeQueryExecutorTest.cs" />
     <Compile Include="TypeHandlerHelpersTest.cs" />
+    <Compile Include="TypeHandlers\CPPCode\TypeHandlerOnTheFlyCPPTest.cs" />
     <Compile Include="TypeHandlers\CPPCode\TypeHandlerCPPCodeTest.cs" />
     <Compile Include="TypeHandlers\ReplacementMethodCalls\TypeHandlerReplacementCallTest.cs" />
     <Compile Include="TypeHandlers\ROOT\ROOTObjectCopiedValueTest.cs" />
