Refactor and reuse the CPPCode attributes to generate the code
Fixes #89

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Statements\StatementForLoop.cs" />
     <Compile Include="TraceHelpers.cs" />
     <Compile Include="TTreeQueryExecutor.cs" />
+    <Compile Include="TypeHandlers\CPPCode\CPPCodeStatement.cs" />
     <Compile Include="TypeHandlers\CPPCode\TypeHandlerCPPCode.cs" />
     <Compile Include="TypeHandlers\CPPCode\TypeHandlerOnTheFlyCPP.cs" />
     <Compile Include="TypeHandlers\ReplacementMethodCalls\TypeHandlerReplacementCall.cs" />
