Add PrettyPrintQuery result operator.
#115
All the infrastructure is there - we now need to make it look like a
nice multi-line statement.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -421,6 +421,7 @@
     <Compile Include="FutureResultOperatorsTest.cs" />
     <Compile Include="FutureValueTTest.cs" />
     <Compile Include="GeneratedCodeTest.cs" />
+    <Compile Include="HelpersTest.cs" />
     <Compile Include="MEFUtilities.cs" />
     <Compile Include="Optimization\OptimizationUtilsTest.cs" />
     <Compile Include="Optimization\StatementLifterTest.cs" />
