make the tests more clear and the code to use the opt service
#120

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -452,6 +452,7 @@
     <Compile Include="ResultOperators\TestCount.cs" />
     <Compile Include="ResultOperators\ROCountTest.cs" />
     <Compile Include="SimpleTTreeExecutorQueriable.cs" />
+    <Compile Include="Statements\DummyTrackingOptimizationService.cs" />
     <Compile Include="Statements\StatementAggregateTest.cs" />
     <Compile Include="Statements\IStatementCombineTest.cs" />
     <Compile Include="Statements\StatementFilterTest.cs" />
